fixed edit note overflow

--- a/src/components/EditNote/EditNote.module.css
+++ b/src/components/EditNote/EditNote.module.css
@@ -4,19 +4,19 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 5vh;
   background: rgba(0, 0, 0, 0.5);
 }
 
 .form {
+  max-height: 90vh;
   position: absolute;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   left: 50%;
-  top: 50%;
   display: flex;
   flex-flow: column nowrap;
   gap: 1rem;
   padding: 1rem;
-  overflow: hidden;
   border-radius: 1rem;
   background: white;
   box-shadow: 0 0 7px #333;
@@ -88,4 +88,16 @@
 .paletteModal div[data-color="white"] {
   background: white;
   border: 1px solid lightgray;
+}
+
+.formMainSector {
+  overflow-y: scroll;
+  display: grid;
+  gap: 1rem;
+}
+
+.imagesSector {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 1rem;
 }
