--- a/src/components/Workspace/Workspace.module.css
+++ b/src/components/Workspace/Workspace.module.css
@@ -5,6 +5,7 @@
 
 .notesGrid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: auto;
   gap: 1rem;
 }
